# bfexec

./: .gitignore  README.md  pyproject.toml  setup.py
bfexec/: __init__.py  bf.py  errors.py
bfexec/compiler/: __init__.py  compiler.py
bfexec/console/: __init__.py  run.py
bfexec/errors/: __init__.py  errors.py
bfexec/instructions/: __init__.py  instructions.py
bfexec/vm/: __init__.py  vm.py
docs/: api.rst  conf.py  index.rst
examples/: hello_world.bf
